<resources>
    <string name="app_name">Farm_Demo</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">关于我们</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="normal_question">常见问题</string>

    <string name="nav_item_home">主页</string>
    <string name="nav_item_message">消息</string>
    <string name="nav_item_setting">系统设置</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_message</item>
        <item>@string/nav_item_setting</item>

    </string-array>

    <string name="title_setting">系统设置</string>
    <string name="title_message">消息</string>
    <string name="title_home">主页</string>

    <string name="home">主页</string>
    <string name="monitor">监控</string>
    <string name="controller">控制</string>
    <string name="log">日志</string>
    <string-array name="pager_labels">
        <item>@string/home</item>
        <item>@string/monitor</item>
        <item>@string/controller</item>
        <item>@string/log</item>
    </string-array>

    <string-array name="titles">
        <item>Android</item>
        <item>IOS</item>
        <item>JAVA</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>WEB</item>
        <item>HTML</item>
        <item>PERL</item>
        <item>C</item>
        <item>SWIFT</item>
    </string-array>

    <string-array name="home_details">
        <item>状态</item>
        <item>控制</item>

    </string-array>
    <integer-array name="home_control_img">
        <item>@drawable/jkx</item>
        <item>@drawable/jkx</item>
        <item>@drawable/jkx</item>
        <item>@drawable/jkx</item>
        <item>@drawable/jkx</item>


        <item>@drawable/jkx</item>
    </integer-array>
    <string-array name="home_control_content">
        <item>电磁阀</item>
        <item>环流风机</item>
        <item>照明灯</item>
        <item>遮阳网</item>
        <item>侧卷膜</item>
        <item>顶卷膜</item>
    </string-array>
    <string-array name="home_control_sign">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
    </string-array>

    <string name="login_label_username">用户名</string>
    <string name="login_username_hint">输入用户名</string>
    <string name="login_label_password">密码</string>
    <string name="login_password_hint">输入密码</string>
    <string name="login_button_text">登录</string>
    <string name="login_register_link">忘记密码?</string>


</resources>
